hyrax_tests/errors/bes_syntax_user_error.ascii
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.ascii?error(3)
-s
